--- a/task2/CMakeLists.txt
+++ b/task2/CMakeLists.txt
@@ -3,7 +3,8 @@ cmake_minimum_required(VERSION 2.8)
 project(Task2)
 
 set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/bin)
-set(LIBRARY_OUTPUT_DIR ${CMAKE_SOURCE_DIR}/lib)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
+set(LIBRARY_OUTPUT_DIR ${PROJECT_SOURCE_DIR}/lib)
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 
 set(MAIN_SOURCE C/main.cpp)
@@ -18,8 +19,8 @@ add_custom_command(
 
 add_custom_target( Preparing DEPENDS index.h)
 
-add_executable(C ${MAIN_SOURCE})
-add_dependencies( C Preparing)
+add_executable(Task2 ${MAIN_SOURCE})
+add_dependencies( Task2 Preparing)
 
 add_subdirectory(B)
-target_link_libraries(C B)
+target_link_libraries(BLibrary)
