--- a/task2/B/CMakeLists.txt
+++ b/task2/B/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 
 project(BLibrary)
-set(SOURCE_LIB lib.cpp)
-add_library(BlLibrary SHARED ${SOURCE_LIB})
+
+
+add_library(BLibrary SHARED lib.cpp)
