--- a/task2/CMakeLists.txt
+++ b/task2/CMakeLists.txt
@@ -4,10 +4,9 @@ project(Task2)
 
 set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/bin)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
-set(LIBRARY_OUTPUT_DIR ${PROJECT_SOURCE_DIR}/lib)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 
-set(MAIN_SOURCE C/main.cpp)
 include_directories(${PROJECT_SOURCE_DIR})
 
 add_custom_command(
@@ -19,8 +18,8 @@ add_custom_command(
 
 add_custom_target( Preparing DEPENDS index.h)
 
-add_executable(Task2 ${MAIN_SOURCE})
+add_executable(Task2 C/main.cpp)
 add_dependencies( Task2 Preparing)
 
-add_subdirectory(B)
-target_link_libraries(BLibrary)
+add_subdirectory(${PROJECT_SOURCE_DIR}/B)
+target_link_libraries(Task2 BLibrary)
