GTest eighth try

--- a/task2/CMakeLists.txt
+++ b/task2/CMakeLists.txt
@@ -33,6 +33,6 @@ include_directories(${gtest_INCLUDE_DIR})
 link_directories(${gtest_LIBRARY_DIR})
 enable_testing()
 
-add_executable(Task2_Test C/main_test.cpp C/tests.cpp)
-target_link_libraries(Task2_Test gtest gtest_main pthread)
-add_test( NAME Task2_Test COMMAND Task2_Test )
+add_executable(CTest C/main_test.cpp C/tests.cpp)
+target_link_libraries(CTest gtest gtest_main pthread)
+add_test( NAME CTest COMMAND CTest )
