--- a/task3/src/CMakeLists.txt
+++ b/task3/src/CMakeLists.txt
@@ -1,5 +1,7 @@
 add_library(buffer SHARED buffer.cpp)
 
+set_target_properties(buffer PROPERTIES BUILD_WITH_INSTALL_RPATH TRUE)
+
 install(TARGETS buffer
         LIBRARY DESTINATION lib
 )
