--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,12 +4,12 @@
 name: CI
 
 # Controls when the action will run. 
-on:
+on: [ push, pull_request ]
   # Triggers the workflow on push or pull request events but only for the master branch
-  push:
-    branches: [ task5 ]
-  pull_request:
-    branches: [ master ]
+  #push:
+  #  branches: [ task5 ]
+  #pull_request:
+  #  branches: [ master ]
 
   # Allows you to run this workflow manually from the Actions tab
   #workflow_dispatch:
