--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Test
         uses: akhtyamovpavel/ActionGtestReport@v0.0.9
         with:
-          exec-path: task5/bin/CTestExe
+          exec-path: bin/CTestExe
           report-path: report.xml
           working-directory: task5
         
