--- a/task6/cmake-with-flask/Dockerfile
+++ b/task6/cmake-with-flask/Dockerfile
@@ -10,9 +10,13 @@ RUN useradd -ms /bin/bash techproguser
 USER techproguser
 WORKDIR /home/techproguser
 
-RUN mkdir cmake-with-flask
-COPY ./ ./cmake-with-flask/
-RUN cd cmake-with-flask && mkdir build && cd build && cmake .. && make -j9
+#RUN mkdir cmake-with-flask
+COPY ./ ./
+#RUN cd cmake-with-flask && mkdir build && cd build && cmake .. && make -j9
+#RUN mkdir build && cd build && cmake .. && make -j9
+
+RUN ls
+RUN ls bin
 
 ARG port
 ARG host
