--- a/task6/cmake-with-flask/Dockerfile
+++ b/task6/cmake-with-flask/Dockerfile
@@ -15,8 +15,8 @@ COPY ./ ./
 #RUN cd cmake-with-flask && mkdir build && cd build && cmake .. && make -j9
 #RUN mkdir build && cd build && cmake .. && make -j9
 
-RUN ls
-RUN ls bin
+#RUN ls
+#RUN ls bin
 
 ARG port
 ARG host
