--- a/task6/cmake-with-flask/Dockerfile
+++ b/task6/cmake-with-flask/Dockerfile
@@ -18,8 +18,8 @@ RUN mkdir build && cd build && cmake .. && make -j9
 #RUN ls
 #RUN ls bin
 
-ARG port
-ARG host
+ARG port=8080
+ARG host=0.0.0.0
 ENV port=${port}
 ENV host=${host}
 
